Use native texturepacker for Cubox

--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -84,6 +84,9 @@ cd $PKG_BUILD_DIR
 
 touch .dummy.in
 
+# prefix on host
+[ "$TARGET_MACHINE" = cubox ] && export TEXTUREPACKER_NATIVE_ROOT=/usr
+
 # prevent internal error in gcc
 if [ ! -f configure ] ; then
   do_autoconf || true
@@ -128,6 +131,7 @@ sed -i lib/libdvd/libdvdnav/config.mak \
 make externals
 make xbmc.bin
 make xbmc-xrandr
+[ "$TARGET_MACHINE" = cubox ] && make skins
 make_install
 
 if [ "$TARGET_ARCH" = arm ]; then
