[cubox] xbmc : use our packages for texturepacker

--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -85,7 +85,7 @@ cd $PKG_BUILD_DIR
 touch .dummy.in
 
 # prefix on host
-[ "$TARGET_MACHINE" = cubox ] && export TEXTUREPACKER_NATIVE_ROOT=/usr
+[ "$TARGET_MACHINE" = cubox ] && export TEXTUREPACKER_NATIVE_ROOT=$ROOT/$TOOLCHAIN
 
 # prevent internal error in gcc
 if [ ! -f configure ] ; then
