imx5 : remove sgx540* from defconfig

--- a/config/defconfigs/geexbox-xbmc-imx5x-efikamx.conf
+++ b/config/defconfigs/geexbox-xbmc-imx5x-efikamx.conf
@@ -249,7 +249,7 @@ CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
 # CONFIG_PKG_sgx530-OMAP34xx-drv is not set
-CONFIG_PKG_sgx540-OMAP44xx-drv=y
+# CONFIG_PKG_sgx540-OMAP44xx-drv is not set
 # CONFIG_PKG_tibtfm-wl1271 is not set
 
 #
@@ -701,9 +701,7 @@ CONFIG_OPT_libbluray_aacs=y
 # CONFIG_PKG_omapfbplay is not set
 # CONFIG_PKG_qtmediahub is not set
 # CONFIG_PKG_sgx530-OpenGLES is not set
-CONFIG_PKG_sgx540-OpenGLES=y
-CONFIG_OPT_sgx540OpenGLES_devtools=y
-CONFIG_OPT_sgx540OpenGLES_xorg=y
+# CONFIG_PKG_sgx540-OpenGLES is not set
 # CONFIG_PKG_showtime is not set
 # CONFIG_PKG_ti-dsp is not set
 # CONFIG_PKG_ti-omap3-omxil is not set
