SDL--host : fix build

--- a/packages/SDL-host/build
+++ b/packages/SDL-host/build
@@ -87,8 +87,10 @@ do_configure host  \
 
 
 make
+sed -i "s%^prefix=.*%prefix=$ROOT/$TOOLCHAIN%" sdl-config
 make_install toolchain
 
 mkdir -p $ROOT/$PKG_BUILD_DIR
 mv .install $ROOT/$PKG_BUILD_DIR
+mv $ROOT/$PKG_BUILD_DIR/.install/usr/bin/sdl-config $ROOT/$PKG_BUILD_DIR/.install/usr/bin/host-sdl-config
 
