--- a/packages/SDL-image-host/build
+++ b/packages/SDL-image-host/build
@@ -11,6 +11,7 @@ cd $BUILD/${PKG_PARENT}-${PKG_VERSION}
 mkdir -p objdir-host
 cd objdir-host
 
+export ac_cv_path_SDL_CONFIG=$ROOT/$TOOLCHAIN/bin/host-sdl-config
 do_configure host \
                   --disable-bmp \
                   --disable-gif \
