--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -85,7 +85,7 @@ cd $PKG_BUILD_DIR
 touch .dummy.in
 
 # prefix on host
-[ "$TARGET_MACHINE" = cubox ] && export TEXTUREPACKER_NATIVE_ROOT=$ROOT/$TOOLCHAIN
+export TEXTUREPACKER_NATIVE_ROOT=$ROOT/$TOOLCHAIN
 
 # prevent internal error in gcc
 if [ ! -f configure ] ; then
@@ -131,7 +131,7 @@ sed -i lib/libdvd/libdvdnav/config.mak \
 make externals
 make xbmc.bin
 make xbmc-xrandr
-[ "$TARGET_MACHINE" = cubox ] && make skins
+make skins
 make_install
 
 if [ "$TARGET_ARCH" = arm ]; then
