vdr: fix parallel build

--- a/packages/vdr/build
+++ b/packages/vdr/build
@@ -38,5 +38,7 @@ EOF
 #done
 #[ -n "$VDR_DEFINES" ] && echo "DEFINES += $VDR_DEFINES" >> Make.config
 
+export MAKEFLAGS=-j1
+
 make && make include-dir # latter one to build extra plugins
 make_install
