network : allow to configure two network cards

--- a/packages/connman/unit/connman.service
+++ b/packages/connman/unit/connman.service
@@ -7,6 +7,7 @@ ConditionPathExists=/run/geexbox/network/connman
 Type=dbus
 BusName=net.connman
 ExecStartPre=/usr/lib/connman/connman-parse-configuration
+ExecStartPre=/usr/lib/connman/connman-parse-configuration2
 ExecStart=/usr/sbin/connmand -n
 
 [Install]
