perl : don't use hardcoded version

--- a/packages/host-perl-datetime-format-strptime/build
+++ b/packages/host-perl-datetime-format-strptime/build
@@ -8,5 +8,5 @@ do_perl_make host
 
 make
 make_install toolcahin
-mkdir -p .install/lib/perl5/5.12.3
+mkdir -p .install/lib/perl5/$PERL_V
 mv .install/$ROOT/$TOOLCHAIN/lib/perl/* .install/lib/perl5/
