--- a/packages/host-perl-soap-lite/build
+++ b/packages/host-perl-soap-lite/build
@@ -8,5 +8,5 @@ sed -i '/^use diagnostics;$/d' Makefile.PL
 do_perl_make host --noprompt
 make
 make_install toolchain
-mkdir -p .install/lib/perl5/5.12.3
+mkdir -p .install/lib/perl5/$PERL_V
 mv .install/$ROOT/$TOOLCHAIN/lib/perl/* .install/lib/perl5/
