--- a/packages/perl-datetime/build
+++ b/packages/perl-datetime/build
@@ -5,7 +5,7 @@
 cd $BUILD/$1*
 
 do_perl_make
-cp $LIB_PREFIX/lib/perl/5.12.3/CORE/*.h lib/
+cp $LIB_PREFIX/lib/perl/$PERL_V/CORE/*.h lib/
 ./Build
 ln -s perl5 .install/usr/lib/perl
 ./Build install --prefix=.install/usr
