--- a/packages/perl-list-moreutils/build
+++ b/packages/perl-list-moreutils/build
@@ -4,7 +4,7 @@
 
 cd $BUILD/$1*
 
-cp $LIB_PREFIX/lib/perl/5.12.3/CORE/*.h .
+cp $LIB_PREFIX/lib/perl/$PERL_V/CORE/*.h .
 do_perl_make
 make
 make_install
