--- a/packages/perl-params-validate/build
+++ b/packages/perl-params-validate/build
@@ -3,7 +3,7 @@
 . config/options
 
 cd $BUILD/$1*
-cp $LIB_PREFIX/lib/perl/5.12.3/CORE/*.h lib/Params
+cp $LIB_PREFIX/lib/perl/$PERL_V/CORE/*.h lib/Params
 
 do_perl_make
 ./Build 
