--- a/packages/perl-xml-libxml/build
+++ b/packages/perl-xml-libxml/build
@@ -4,6 +4,7 @@
 
 cd $BUILD/$1*
 
+export XMLPREFIX=$LIB_PREFIX
 do_perl_make
 export CFLAGS='$CFLAGS -I${$LIB_PREFIX}/include/libxml2'
 export MAKEFLAGS=-j1
