--- a/packages/perl/build
+++ b/packages/perl/build
@@ -116,6 +116,9 @@ sed -i -e 's,@DESTDIR@,/usr,g' \
        -e 's,/site_perl,,g' \
        -e 's,/vendor_perl,,g' \
        -e 's,/perl5,/perl,g' \
+       -e 's,@USRBIN@,/usr/bin,g' \
+       -e "s,@LIBDIR@,/usr/lib,g" \
+       -e "s,@INCLUDEDIR@,${SYSROOT_PREFIX}/include,g" \
           config.sh-${TARGET_ARCH}-${TARGET_LIBC}
 
 case "${TARGET_ARCH}" in
