--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -131,7 +131,7 @@ sed -i lib/libdvd/libdvdnav/config.mak \
 make externals
 make xbmc.bin
 make xbmc-xrandr
-make skins
+#make skins
 make_install
 
 if [ "$TARGET_ARCH" = arm ]; then
