--- a/packages/xkeyboard-config/build
+++ b/packages/xkeyboard-config/build
@@ -6,9 +6,9 @@ cd $BUILD/$1*
 
 export PERL_MM_USE_DEFAULT=1
 export PERLCONFIGTARGET="yes"
-export PERL_INC=$LIB_PREFIX/lib/perl5/5.12.3/CORE
-export PERL_LIB=$LIB_PREFIX/lib/perl5/5.12.3
-export PERL_ARCHLIB=$LIB_PREFIX/lib/perl5/5.12.3
+export PERL_INC=$LIB_PREFIX/lib/perl5/$PERL_V/CORE
+export PERL_LIB=$LIB_PREFIX/lib/perl5/$PERL_V
+export PERL_ARCHLIB=$LIB_PREFIX/lib/perl5/$PERL_V
 export PERLHOSTLIB=$ROOT/$TOOLCHAIN/lib/
 export PERL5LIB="${PERL_ARCHLIB}"
 
