--- a/packages/host-perl-xml-sax/build
+++ b/packages/host-perl-xml-sax/build
@@ -9,5 +9,5 @@ do_perl_make host
 ln -s blib/lib/XML XML
 make PASTHRU_INC="${CFLAGS}" CCFLAGS="${CFLAGS}" LD="${HOST_CC}"
 make_install toolchain
-mkdir -p .install/lib/perl5/5.12.3
+mkdir -p .install/lib/perl5/$PERL_V
 mv $here/.install/$ROOT/$TOOLCHAIN/lib/perl/* .install/lib/perl5/
