--- a/packages/host-perl-xml-twig/build
+++ b/packages/host-perl-xml-twig/build
@@ -7,5 +7,5 @@ cd $BUILD/$1*
 do_perl_make host -y
 make
 make_install toolchain
-mkdir -p .install/lib/perl5/5.12.3
+mkdir -p .install/lib/perl5/$PERL_V
 mv .install/$ROOT/$TOOLCHAIN/lib/perl/* .install/lib/perl5/
