xbmc : activate texture packer only for cubox

--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -132,6 +132,7 @@ make externals
 make xbmc.bin
 make xbmc-xrandr
 #make skins
+[ "$TARGET_MACHINE" = cubox ] && make skins
 make_install
 
 if [ "$TARGET_ARCH" = arm ]; then
