xbmc: enable proper TexturePacker for all platforms

--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -85,7 +85,8 @@ cd $PKG_BUILD_DIR
 touch .dummy.in
 
 # prefix on host
-export TEXTUREPACKER_NATIVE_ROOT=$ROOT/$TOOLCHAIN
+export USE_TEXTUREPACKER_NATIVE_ROOT=$ROOT/$TOOLCHAIN
+export use_texturepacker_native=yes
 
 # prevent internal error in gcc
 if [ ! -f configure ] ; then
@@ -131,8 +132,7 @@ sed -i lib/libdvd/libdvdnav/config.mak \
 make externals
 make xbmc.bin
 make xbmc-xrandr
-#make skins
-[ "$TARGET_MACHINE" = cubox ] && make skins
+make skins
 make_install
 
 if [ "$TARGET_ARCH" = arm ]; then
