--- a/packages/host-perl-yaml-syck/build
+++ b/packages/host-perl-yaml-syck/build
@@ -2,13 +2,14 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 do_perl_make host
 
 make
-make_install
+make_install toolchain
 
 mkdir -p .install/lib/perl5/$PERL_V
 mv .install/$ROOT/$TOOLCHAIN/lib/perl/* .install/lib/perl5/
-#do_perl_strip
