--- a/config/defconfigs/geexbox-xbmc-omap3-igepv2.conf
+++ b/config/defconfigs/geexbox-xbmc-omap3-igepv2.conf
@@ -406,7 +406,8 @@ CONFIG_PKG_bzip2=y
 CONFIG_PKG_curl=y
 # CONFIG_PKG_cxxtools is not set
 # CONFIG_PKG_db is not set
-# CONFIG_PKG_db47 is not set
+CONFIG_PKG_db47=y
+CONFIG_OPT_db47_devtools=y
 CONFIG_PKG_dbus-glib=y
 # CONFIG_PKG_disko is not set
 # CONFIG_PKG_disko-demos is not set
@@ -434,7 +435,7 @@ CONFIG_PKG_fontconfig=y
 CONFIG_PKG_freetype=y
 CONFIG_PKG_fribidi=y
 # CONFIG_PKG_ftgl is not set
-# CONFIG_PKG_gdbm is not set
+CONFIG_PKG_gdbm=y
 # CONFIG_PKG_gdk-pixbuf is not set
 CONFIG_PKG_gettext=y
 # CONFIG_PKG_glibmm is not set
@@ -836,77 +837,107 @@ CONFIG_PKG_wpa-supplicant=y
 #
 # perl
 #
-# CONFIG_PKG_libwww-perl is not set
+CONFIG_PKG_libwww-perl=y
 # CONFIG_PKG_libxml-perl is not set
-# CONFIG_PKG_perl is not set
-# CONFIG_PKG_perl-archive-zip is not set
-# CONFIG_PKG_perl-class-inspector is not set
+CONFIG_PKG_perl=y
+CONFIG_OPT_perl_devtools=y
+CONFIG_PKG_perl-archive-zip=y
+CONFIG_PKG_perl-class-inspector=y
+CONFIG_PKG_perl-class-load=y
+CONFIG_PKG_perl-class-methodmaker=y
+CONFIG_PKG_perl-class-singleton=y
+CONFIG_PKG_perl-compress-raw-zlib=y
 # CONFIG_PKG_perl-cpan-meta is not set
 # CONFIG_PKG_perl-cpan-meta-yaml is not set
-# CONFIG_PKG_perl-data-dump is not set
-# CONFIG_PKG_perl-date-manip is not set
-# CONFIG_PKG_perl-datetime is not set
-# CONFIG_PKG_perl-datetime-format-strptime is not set
-# CONFIG_PKG_perl-datetime-locale is not set
-# CONFIG_PKG_perl-datetime-timezone is not set
-# CONFIG_PKG_perl-encode-locale is not set
+CONFIG_PKG_perl-data-dump=y
+CONFIG_PKG_perl-data-optlist=y
+CONFIG_PKG_perl-date-manip=y
+CONFIG_PKG_perl-datetime=y
+CONFIG_PKG_perl-datetime-format-iso8601=y
+CONFIG_PKG_perl-datetime-format-strptime=y
+CONFIG_PKG_perl-datetime-locale=y
+CONFIG_PKG_perl-datetime-timezone=y
+CONFIG_PKG_perl-encode-locale=y
 # CONFIG_PKG_perl-extutils-cbuilder is not set
 # CONFIG_PKG_perl-extutils-install is not set
 # CONFIG_PKG_perl-extutils-manifest is not set
 # CONFIG_PKG_perl-extutils-parsexs is not set
-# CONFIG_PKG_perl-file-slurp is not set
-# CONFIG_PKG_perl-html-form is not set
-# CONFIG_PKG_perl-html-parser is not set
-# CONFIG_PKG_perl-html-tagset is not set
-# CONFIG_PKG_perl-html-tokeparser is not set
-# CONFIG_PKG_perl-html-tree is not set
-# CONFIG_PKG_perl-http-cache-transparent is not set
-# CONFIG_PKG_perl-http-daemon is not set
-# CONFIG_PKG_perl-http-date is not set
-# CONFIG_PKG_perl-http-message is not set
+CONFIG_PKG_perl-file-listing=y
+CONFIG_PKG_perl-file-slurp=y
+CONFIG_PKG_perl-html-form=y
+CONFIG_PKG_perl-html-parser=y
+CONFIG_PKG_perl-html-tagset=y
+CONFIG_PKG_perl-html-tokeparser=y
+CONFIG_PKG_perl-html-tree=y
+CONFIG_PKG_perl-http-cache-transparent=y
+CONFIG_PKG_perl-http-cookies=y
+CONFIG_PKG_perl-http-daemon=y
+CONFIG_PKG_perl-http-date=y
+CONFIG_PKG_perl-http-message=y
+CONFIG_PKG_perl-http-negociate=y
 # CONFIG_PKG_perl-http-server-simple is not set
-# CONFIG_PKG_perl-io-stringy is not set
+# CONFIG_PKG_perl-io-socket-ssl is not set
+CONFIG_PKG_perl-io-stringy=y
+CONFIG_PKG_perl-io-zlib=y
+# CONFIG_PKG_perl-json is not set
 # CONFIG_PKG_perl-json-pp is not set
-# CONFIG_PKG_perl-linux-dvb is not set
-# CONFIG_PKG_perl-list-moreutils is not set
-# CONFIG_PKG_perl-lwp-mediatypes is not set
-# CONFIG_PKG_perl-mailtools is not set
-# CONFIG_PKG_perl-math-round is not set
+CONFIG_PKG_perl-lingua-en-numbers-ordinate=y
+CONFIG_PKG_perl-linux-dvb=y
+CONFIG_PKG_perl-list-moreutils=y
+CONFIG_PKG_perl-lwp-mediatypes=y
+CONFIG_PKG_perl-mailtools=y
+CONFIG_PKG_perl-math-round=y
 # CONFIG_PKG_perl-mime-base64 is not set
-# CONFIG_PKG_perl-mime-tools is not set
+CONFIG_PKG_perl-mime-tools=y
 # CONFIG_PKG_perl-module-build is not set
+CONFIG_PKG_perl-module-exporter-heavy=y
+CONFIG_PKG_perl-module-implementation=y
 # CONFIG_PKG_perl-module-metadata is not set
+CONFIG_PKG_perl-module-runtime=y
+CONFIG_PKG_perl-net-http=y
 # CONFIG_PKG_perl-os-type is not set
-# CONFIG_PKG_perl-params-validate is not set
+CONFIG_PKG_perl-params-util=y
+CONFIG_PKG_perl-params-validate=y
 # CONFIG_PKG_perl-parse-cpan-meta is not set
 # CONFIG_PKG_perl-parse-recdescent is not set
 # CONFIG_PKG_perl-parse-yapp is not set
-# CONFIG_PKG_perl-soap-lite is not set
-# CONFIG_PKG_perl-sub-uplevel is not set
-# CONFIG_PKG_perl-term-readkey is not set
-# CONFIG_PKG_perl-test-deep is not set
-# CONFIG_PKG_perl-test-exception is not set
-# CONFIG_PKG_perl-test-harness is not set
-# CONFIG_PKG_perl-test-inter is not set
-# CONFIG_PKG_perl-test-pod is not set
-# CONFIG_PKG_perl-test-simple is not set
+CONFIG_PKG_perl-soap-lite=y
+# CONFIG_PKG_perl-ssleay is not set
+# CONFIG_PKG_perl-sub-install is not set
+CONFIG_PKG_perl-sub-uplevel=y
+# CONFIG_PKG_perl-task-weaken is not set
+CONFIG_PKG_perl-term-progressbar=y
+CONFIG_PKG_perl-term-readkey=y
+CONFIG_PKG_perl-test-deep=y
+CONFIG_PKG_perl-test-exception=y
+CONFIG_PKG_perl-test-fatal=y
+CONFIG_PKG_perl-test-harness=y
+CONFIG_PKG_perl-test-inter=y
+CONFIG_PKG_perl-test-pod=y
+CONFIG_PKG_perl-test-requires=y
+CONFIG_PKG_perl-test-simple=y
 # CONFIG_PKG_perl-test-warn is not set
-# CONFIG_PKG_perl-test-weaken is not set
-# CONFIG_PKG_perl-timedate is not set
+CONFIG_PKG_perl-test-weaken=y
+CONFIG_PKG_perl-timedate=y
 # CONFIG_PKG_perl-tree-dag-node is not set
-# CONFIG_PKG_perl-uri is not set
+CONFIG_PKG_perl-try-tiny=y
+CONFIG_PKG_perl-unicode-string=y
+CONFIG_PKG_perl-unicode-utf8simple=y
+CONFIG_PKG_perl-uri=y
 # CONFIG_PKG_perl-version is not set
 # CONFIG_PKG_perl-version-requirements is not set
-# CONFIG_PKG_perl-www-mechanize is not set
-# CONFIG_PKG_perl-xml-dom is not set
-# CONFIG_PKG_perl-xml-libxml is not set
+CONFIG_PKG_perl-www-mechanize=y
+CONFIG_PKG_perl-xml-dom=y
+CONFIG_PKG_perl-xml-libxml=y
 # CONFIG_PKG_perl-xml-libxslt is not set
-# CONFIG_PKG_perl-xml-namespacesupport is not set
-# CONFIG_PKG_perl-xml-parser is not set
-# CONFIG_PKG_perl-xml-sax is not set
-# CONFIG_PKG_perl-xml-twig is not set
-# CONFIG_PKG_perl-xml-writer is not set
-# CONFIG_PKG_perl-yaml-syck is not set
+CONFIG_PKG_perl-xml-namespacesupport=y
+CONFIG_PKG_perl-xml-parser=y
+CONFIG_PKG_perl-xml-sax=y
+CONFIG_PKG_perl-xml-sax-base=y
+CONFIG_PKG_perl-xml-twig=y
+CONFIG_PKG_perl-xml-writer=y
+CONFIG_PKG_perl-yaml-syck=y
+CONFIG_PKG_xmltv=y
 
 #
 # python
