--- a/config/defconfigs/base-imx6-sabrelite.conf
+++ b/config/defconfigs/base-imx6-sabrelite.conf
@@ -766,11 +766,17 @@ CONFIG_PKG_network-backend=y
 # CONFIG_PKG_perl is not set
 # CONFIG_PKG_perl-archive-zip is not set
 # CONFIG_PKG_perl-class-inspector is not set
+# CONFIG_PKG_perl-class-load is not set
+# CONFIG_PKG_perl-class-methodmaker is not set
+# CONFIG_PKG_perl-class-singleton is not set
+# CONFIG_PKG_perl-compress-raw-zlib is not set
 # CONFIG_PKG_perl-cpan-meta is not set
 # CONFIG_PKG_perl-cpan-meta-yaml is not set
 # CONFIG_PKG_perl-data-dump is not set
+# CONFIG_PKG_perl-data-optlist is not set
 # CONFIG_PKG_perl-date-manip is not set
 # CONFIG_PKG_perl-datetime is not set
+# CONFIG_PKG_perl-datetime-format-iso8601 is not set
 # CONFIG_PKG_perl-datetime-format-strptime is not set
 # CONFIG_PKG_perl-datetime-locale is not set
 # CONFIG_PKG_perl-datetime-timezone is not set
@@ -779,6 +785,7 @@ CONFIG_PKG_network-backend=y
 # CONFIG_PKG_perl-extutils-install is not set
 # CONFIG_PKG_perl-extutils-manifest is not set
 # CONFIG_PKG_perl-extutils-parsexs is not set
+# CONFIG_PKG_perl-file-listing is not set
 # CONFIG_PKG_perl-file-slurp is not set
 # CONFIG_PKG_perl-html-form is not set
 # CONFIG_PKG_perl-html-parser is not set
@@ -786,12 +793,18 @@ CONFIG_PKG_network-backend=y
 # CONFIG_PKG_perl-html-tokeparser is not set
 # CONFIG_PKG_perl-html-tree is not set
 # CONFIG_PKG_perl-http-cache-transparent is not set
+# CONFIG_PKG_perl-http-cookies is not set
 # CONFIG_PKG_perl-http-daemon is not set
 # CONFIG_PKG_perl-http-date is not set
 # CONFIG_PKG_perl-http-message is not set
+# CONFIG_PKG_perl-http-negociate is not set
 # CONFIG_PKG_perl-http-server-simple is not set
+# CONFIG_PKG_perl-io-socket-ssl is not set
 # CONFIG_PKG_perl-io-stringy is not set
+# CONFIG_PKG_perl-io-zlib is not set
+# CONFIG_PKG_perl-json is not set
 # CONFIG_PKG_perl-json-pp is not set
+# CONFIG_PKG_perl-lingua-en-numbers-ordinate is not set
 # CONFIG_PKG_perl-linux-dvb is not set
 # CONFIG_PKG_perl-list-moreutils is not set
 # CONFIG_PKG_perl-lwp-mediatypes is not set
@@ -800,25 +813,39 @@ CONFIG_PKG_network-backend=y
 # CONFIG_PKG_perl-mime-base64 is not set
 # CONFIG_PKG_perl-mime-tools is not set
 # CONFIG_PKG_perl-module-build is not set
+# CONFIG_PKG_perl-module-exporter-heavy is not set
+# CONFIG_PKG_perl-module-implementation is not set
 # CONFIG_PKG_perl-module-metadata is not set
+# CONFIG_PKG_perl-module-runtime is not set
+# CONFIG_PKG_perl-net-http is not set
 # CONFIG_PKG_perl-os-type is not set
+# CONFIG_PKG_perl-params-util is not set
 # CONFIG_PKG_perl-params-validate is not set
 # CONFIG_PKG_perl-parse-cpan-meta is not set
 # CONFIG_PKG_perl-parse-recdescent is not set
 # CONFIG_PKG_perl-parse-yapp is not set
 # CONFIG_PKG_perl-soap-lite is not set
+# CONFIG_PKG_perl-ssleay is not set
+# CONFIG_PKG_perl-sub-install is not set
 # CONFIG_PKG_perl-sub-uplevel is not set
+# CONFIG_PKG_perl-task-weaken is not set
+# CONFIG_PKG_perl-term-progressbar is not set
 # CONFIG_PKG_perl-term-readkey is not set
 # CONFIG_PKG_perl-test-deep is not set
 # CONFIG_PKG_perl-test-exception is not set
+# CONFIG_PKG_perl-test-fatal is not set
 # CONFIG_PKG_perl-test-harness is not set
 # CONFIG_PKG_perl-test-inter is not set
 # CONFIG_PKG_perl-test-pod is not set
+# CONFIG_PKG_perl-test-requires is not set
 # CONFIG_PKG_perl-test-simple is not set
 # CONFIG_PKG_perl-test-warn is not set
 # CONFIG_PKG_perl-test-weaken is not set
 # CONFIG_PKG_perl-timedate is not set
 # CONFIG_PKG_perl-tree-dag-node is not set
+# CONFIG_PKG_perl-try-tiny is not set
+# CONFIG_PKG_perl-unicode-string is not set
+# CONFIG_PKG_perl-unicode-utf8simple is not set
 # CONFIG_PKG_perl-uri is not set
 # CONFIG_PKG_perl-version is not set
 # CONFIG_PKG_perl-version-requirements is not set
@@ -829,9 +856,11 @@ CONFIG_PKG_network-backend=y
 # CONFIG_PKG_perl-xml-namespacesupport is not set
 # CONFIG_PKG_perl-xml-parser is not set
 # CONFIG_PKG_perl-xml-sax is not set
+# CONFIG_PKG_perl-xml-sax-base is not set
 # CONFIG_PKG_perl-xml-twig is not set
 # CONFIG_PKG_perl-xml-writer is not set
 # CONFIG_PKG_perl-yaml-syck is not set
+# CONFIG_PKG_xmltv is not set
 
 #
 # python
