--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -86,7 +86,9 @@ touch .dummy.in
 
 # prefix on host
 export USE_TEXTUREPACKER_NATIVE_ROOT=$ROOT/$TOOLCHAIN
-export use_texturepacker_native=yes
+EXTRA_CONFIG="$EXTRA_CONFIG --enable-use_texturepacker_native"
+# workaround for CuBox build
+export TEXTUREPACKER_NATIVE_ROOT=$USE_TEXTUREPACKER_NATIVE_ROOT
 
 # prevent internal error in gcc
 if [ ! -f configure ] ; then
