--- a/packages/connman/build
+++ b/packages/connman/build
@@ -1,8 +1,9 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-cd $BUILD/$1*
+cd $PKG_BUILD_DIR
 
 if pkg_uses $1 wifi; then
   WIFI_CONFIG="--enable-wifi"
@@ -42,7 +43,7 @@ make
 make_install
 
 mkdir -p .install/usr/bin
-cp -P client/cm .install/usr/bin
+cp -P client/connmanctl .install/usr/bin
 
 mkdir -p .install/etc/connman
 cp -P $ROOT/$PACKAGES/$1/config/main.conf .install/etc/connman
