openvpn : update to 2.2.2

--- a/packages/openvpn/build
+++ b/packages/openvpn/build
@@ -1,8 +1,9 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-cd $BUILD/$1*
+cd $PKG_BUILD_DIR
 
 if pkg_uses $1 smartcard; then
   SMARTCARD_OPTS="--enable-pkcs11"
