xbmc : fix build of TexturePacker for other platforms

--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -86,9 +86,12 @@ touch .dummy.in
 
 # prefix on host
 export USE_TEXTUREPACKER_NATIVE_ROOT=$ROOT/$TOOLCHAIN
-EXTRA_CONFIG="$EXTRA_CONFIG --enable-use_texturepacker_native"
-# workaround for CuBox build
-export TEXTUREPACKER_NATIVE_ROOT=$USE_TEXTUREPACKER_NATIVE_ROOT
+if [ "$TARGET_MACHINE" = cubox ] ; then
+  EXTRA_CONFIG="$EXTRA_CONFIG --enable-use_texturepacker_native"
+  export TEXTUREPACKER_NATIVE_ROOT=$USE_TEXTUREPACKER_NATIVE_ROOT
+else 
+  export use_texturepacker_native=yes
+fi
 
 # prevent internal error in gcc
 if [ ! -f configure ] ; then
