connman : make client command tool optional

--- a/packages/connman/build
+++ b/packages/connman/build
@@ -17,10 +17,17 @@ else
   BLUETOOTH_CONFIG="--disable-bluetooth"
 fi
 
+if pkg_uses $1 client; then
+  CLIENT_CONFIG="--enable-client"
+else
+  CLIENT_CONFIG="--disable-client"
+fi
+
 do_configure \
             --enable-ethernet \
             $WIFI_CONFIG \
             $BLUETOOTH_CONFIG \
+            $CLIENT_CONFIG \
             --disable-hh2serial-gps \
             --disable-ofono \
             --disable-openconnect \
@@ -35,15 +42,16 @@ do_configure \
             --disable-nmcompat \
             --disable-polkit \
             --enable-loopback \
-            --enable-client \
             --disable-tools \
             --enable-datafiles \
 
 make
 make_install
 
-mkdir -p .install/usr/bin
-cp -P client/connmanctl .install/usr/bin
+if pkg_uses $1 client; then
+  mkdir -p .install/usr/bin
+  cp -P client/connmanctl .install/usr/bin
+fi
 
 mkdir -p .install/etc/connman
 cp -P $ROOT/$PACKAGES/$1/config/main.conf .install/etc/connman
