Use native texturepacker for RPi as well

--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -86,7 +86,7 @@ touch .dummy.in
 
 # prefix on host
 export USE_TEXTUREPACKER_NATIVE_ROOT=$ROOT/$TOOLCHAIN
-if [ "$TARGET_MACHINE" = cubox ] ; then
+if [ "$TARGET_MACHINE" = cubox ] || [ "$TARGET_MACHINE" = raspberrypi ]; then
   EXTRA_CONFIG="$EXTRA_CONFIG --enable-use_texturepacker_native"
   export TEXTUREPACKER_NATIVE_ROOT=$USE_TEXTUREPACKER_NATIVE_ROOT
 else 
