[x86_64] do not build appleir, update defconfig

--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -253,7 +253,7 @@ CONFIG_PKG_pcmciautils=y
 # drivers
 #
 # CONFIG_PKG_acx is not set
-CONFIG_PKG_appleir=y
+# CONFIG_PKG_appleir is not set
 # CONFIG_PKG_ar6k is not set
 CONFIG_PKG_cryptodev=y
 CONFIG_PKG_crystalhd=y
@@ -810,6 +810,7 @@ CONFIG_PKG_bftpd=y
 CONFIG_PKG_connman=y
 CONFIG_OPT_connman_wifi=y
 # CONFIG_OPT_connman_bluetooth is not set
+# CONFIG_OPT_connman_client is not set
 # CONFIG_PKG_connman-tools is not set
 CONFIG_PKG_dropbear=m
 CONFIG_OPT_dropbear_dbclient=y
@@ -1012,7 +1013,7 @@ CONFIG_PKG_kbd=y
 CONFIG_PKG_kmod=y
 CONFIG_PKG_linux=y
 CONFIG_OPT_linux_alsa=y
-# CONFIG_OPT_linux_bluetooth is not set
+CONFIG_OPT_linux_bluetooth=y
 # CONFIG_OPT_linux_dab is not set
 CONFIG_OPT_linux_dvb=y
 CONFIG_OPT_linux_ethernet=y
@@ -1025,7 +1026,6 @@ CONFIG_OPT_linux_mmc=y
 CONFIG_OPT_linux_ms=y
 CONFIG_OPT_linux_pata=y
 # CONFIG_OPT_linux_pccard is not set
-CONFIG_OPT_linux_ppt=y
 # CONFIG_OPT_linux_radio is not set
 CONFIG_OPT_linux_rtc=y
 CONFIG_OPT_linux_sata=y
