xf86-video-fglrx : bump version to 12.10

--- a/packages/xf86-video-fglrx/build
+++ b/packages/xf86-video-fglrx/build
@@ -23,6 +23,9 @@ $SCRIPTS/build linux
 
 cd $PKG_BUILD_DIR
 
+ATI_PKG="`basename $PKG_URL | sed 's/.zip//'`.run"
+sh $ATI_PKG --extract .
+
 cp -P arch/$ARCH/lib/modules/fglrx/build_mod/libfglrx_ip.a \
   common/lib/modules/fglrx/build_mod/2.6.x
 
