libplist : update to 1.8

--- a/packages/libplist/build
+++ b/packages/libplist/build
@@ -1,10 +1,12 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-cd $BUILD/$1*
-mkdir -p build
-cd build
+cd $PKG_BUILD_DIR
+
+mkdir -p obj-target
+cd obj-target
 cmake -DCMAKE_INSTALL_PREFIX=/usr \
       -DENABLE_PYTHON="OFF" \
       -DCMAKE_FIND_ROOT_PATH=$LIB_PREFIX \
@@ -12,4 +14,4 @@ cmake -DCMAKE_INSTALL_PREFIX=/usr \
 
 make_install
 cd ..
-mv build/.install .
+mv obj-target/.install .
