mesa: bump to 9.0

--- a/packages/mesa/build
+++ b/packages/mesa/build
@@ -41,6 +41,7 @@ fi
 builtin_compiler() {
   # build the internal compiler
   setup_toolchain host
+  NOCONFIGURE=yes ./autogen.sh
 
   LIBDRM_CFLAGS="a" LIBDRM_LIBS="a" \
   DRIGL_CFLAGS="a" DRIGL_LIBS="a" \
@@ -68,6 +69,8 @@ builtin_compiler
 
 setup_toolchain target
 
+NOCONFIGURE=yes ./autogen.sh
+
 # LLVM Hack
 sed -i 's%LLVM_LIBS=".*"%LLVM_LIBS="-lLLVM-$LLVM_VERSION"%' configure
 
@@ -92,7 +95,6 @@ do_configure target \
   --enable-shared-glapi \
   --enable-shared-dricore \
   --enable-driglx-direct \
-  --enable-glu \
   $VDPAU \
   $XVMC \
 
