wayland: switch to 1.0.0

--- a/packages/wayland/build
+++ b/packages/wayland/build
@@ -7,13 +7,16 @@ cd $PKG_BUILD_DIR
 
 mkdir -p objdir-host
 cd objdir-host
-do_configure host
+do_configure host --disable-documentation
 make
 make_install toolchain
 
 cd ..
 mkdir -p objdir-target
 cd objdir-target
-do_configure --disable-scanner
+do_configure \
+  --disable-scanner \
+  --disable-documentation
+
 make
 make_install
