weston: switch to 1.0.0 Compile with mesa 9.0, depend on libglu.

--- a/packages/weston/build
+++ b/packages/weston/build
@@ -5,12 +5,13 @@
 get_meta $1
 cd $PKG_BUILD_DIR
 
+do_autoconf
 do_configure \
 	--disable-setuid-install \
 	--disable-x11-compositor \
 	--enable-drm-compositor \
-	--disable-openwfd-compositor \
 	--disable-wayland-compositor \
+    --disable-weston-launch \
 	--enable-simple-clients \
 	--enable-clients \
 	--disable-tablet-shell
