cairo: build with wayland 1.0.0

--- a/packages/cairo/build
+++ b/packages/cairo/build
@@ -34,6 +34,12 @@ else
   DIRECTFB_CONFIG="--enable-directfb=no"
 fi
 
+if pkg_uses $1 wayland; then
+  WAYLAND_CONFIG="--with-x --enable-xlib=yes --enable-xlib-xrender=yes --enable-xcb=yes --enable-xlib-xcb=yes --enable-xcb-shm=yes"
+else
+  WAYLAND_CONFIG="--enable-xcb=no"
+fi
+
 do_configure \
             --disable-valgrind \
             --enable-ft=yes \
@@ -47,6 +53,7 @@ do_configure \
             $GLES_CONFIG \
             $VG_CONFIG \
             $DIRECTFB_CONFIG \
+            $WAYLAND_CONFIG \
 
 make
 make_install
