--- a/packages/xf86-video-mga/build
+++ b/packages/xf86-video-mga/build
@@ -1,12 +1,15 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-cd $BUILD/$1*
+cd $PKG_BUILD_DIR
+
 xorg_drv_configure_prepend
 do_configure \
             --enable-dri \
             --enable-exa \
             --with-xorg-module-dir=$XORG_PATH_MODULES
+
 make
 make_install
