--- a/config/platforms/x86_64/generic/linux.conf
+++ b/config/platforms/x86_64/generic/linux.conf
@@ -569,7 +569,7 @@ CONFIG_ARCH_BINFMT_ELF_RANDOMIZE_PIE=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 # CONFIG_HAVE_AOUT is not set
 # CONFIG_BINFMT_MISC is not set
-# CONFIG_IA32_EMULATION is not set
+CONFIG_IA32_EMULATION=y
 # CONFIG_COMPAT_FOR_U64_ALIGNMENT is not set
 CONFIG_HAVE_TEXT_POKE_SMP=y
 CONFIG_X86_DEV_DMA_OPS=y
