refresh defconfig files

--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -274,7 +274,7 @@ CONFIG_PKG_pcmciautils=y
 # CONFIG_PKG_ar6k is not set
 CONFIG_PKG_cryptodev=y
 CONFIG_PKG_crystalhd=y
-# CONFIG_PKG_cwiid is not set
+CONFIG_PKG_cwiid=y
 CONFIG_PKG_drivers-jmicron-ethernet=m
 CONFIG_PKG_eventlircd=y
 CONFIG_PKG_lirc=y
@@ -652,6 +652,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_hiawatha is not set
 # CONFIG_PKG_iioutils is not set
 # CONFIG_PKG_libcheck is not set
+CONFIG_PKG_libglu=y
 # CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
@@ -825,7 +826,9 @@ CONFIG_PKG_amionline=y
 CONFIG_PKG_automounter-nfs=m
 CONFIG_PKG_automounter-smb=m
 CONFIG_PKG_bftpd=y
-# CONFIG_PKG_bluez is not set
+CONFIG_PKG_bluez=y
+CONFIG_OPT_bluez_devtools=y
+CONFIG_OPT_bluez_alsa=y
 CONFIG_PKG_connman=y
 CONFIG_OPT_connman_wifi=y
 # CONFIG_OPT_connman_bluetooth is not set
