--- a/config/defconfigs/base-x86_64-generic.conf
+++ b/config/defconfigs/base-x86_64-generic.conf
@@ -591,6 +591,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_hiawatha is not set
 # CONFIG_PKG_iioutils is not set
 # CONFIG_PKG_libcheck is not set
+# CONFIG_PKG_libglu is not set
 # CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
@@ -734,6 +735,7 @@ CONFIG_PKG_automounter-smb=y
 CONFIG_PKG_connman=y
 CONFIG_OPT_connman_wifi=y
 # CONFIG_OPT_connman_bluetooth is not set
+# CONFIG_OPT_connman_client is not set
 # CONFIG_PKG_connman-tools is not set
 # CONFIG_PKG_dropbear is not set
 # CONFIG_PKG_gatling is not set
@@ -943,7 +945,6 @@ CONFIG_OPT_linux_ethernet=y
 # CONFIG_OPT_linux_ms is not set
 CONFIG_OPT_linux_pata=y
 # CONFIG_OPT_linux_pccard is not set
-CONFIG_OPT_linux_ppt=y
 # CONFIG_OPT_linux_radio is not set
 CONFIG_OPT_linux_rtc=y
 CONFIG_OPT_linux_sata=y
