--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -653,6 +653,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_hiawatha is not set
 # CONFIG_PKG_iioutils is not set
 # CONFIG_PKG_libcheck is not set
+CONFIG_PKG_libglu=y
 # CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
@@ -809,6 +810,7 @@ CONFIG_PKG_bftpd=y
 CONFIG_PKG_connman=y
 CONFIG_OPT_connman_wifi=y
 # CONFIG_OPT_connman_bluetooth is not set
+# CONFIG_OPT_connman_client is not set
 # CONFIG_PKG_connman-tools is not set
 # CONFIG_PKG_dropbear is not set
 # CONFIG_PKG_gatling is not set
@@ -1024,7 +1026,6 @@ CONFIG_OPT_linux_mmc=y
 CONFIG_OPT_linux_ms=y
 CONFIG_OPT_linux_pata=y
 # CONFIG_OPT_linux_pccard is not set
-CONFIG_OPT_linux_ppt=y
 # CONFIG_OPT_linux_radio is not set
 CONFIG_OPT_linux_rtc=y
 CONFIG_OPT_linux_sata=y
