--- a/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
@@ -629,6 +629,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_hiawatha is not set
 # CONFIG_PKG_iioutils is not set
 # CONFIG_PKG_libcheck is not set
+CONFIG_PKG_libglu=y
 # CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
@@ -808,6 +809,7 @@ CONFIG_PKG_bftpd=y
 CONFIG_PKG_connman=y
 CONFIG_OPT_connman_wifi=y
 # CONFIG_OPT_connman_bluetooth is not set
+# CONFIG_OPT_connman_client is not set
 # CONFIG_PKG_connman-tools is not set
 # CONFIG_PKG_dropbear is not set
 # CONFIG_PKG_gatling is not set
@@ -1021,7 +1023,6 @@ CONFIG_OPT_linux_mmc=y
 CONFIG_OPT_linux_ms=y
 # CONFIG_OPT_linux_pata is not set
 # CONFIG_OPT_linux_pccard is not set
-# CONFIG_OPT_linux_ppt is not set
 # CONFIG_OPT_linux_radio is not set
 CONFIG_OPT_linux_rtc=y
 # CONFIG_OPT_linux_sata is not set
