refresh defconfig files

--- a/config/defconfigs/base-x86_64-generic.conf
+++ b/config/defconfigs/base-x86_64-generic.conf
@@ -1094,6 +1094,7 @@ CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_xf86-video-trident is not set
 # CONFIG_PKG_xf86-video-v4l2 is not set
 # CONFIG_PKG_xf86-video-vesa is not set
+# CONFIG_PKG_xf86-video-virtualbox is not set
 # CONFIG_PKG_xf86-video-vmware is not set
 # CONFIG_PKG_xinput-calibrator is not set
 # CONFIG_PKG_xkbcomp is not set
