--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -1180,6 +1180,7 @@ CONFIG_PKG_xf86-video-openchrome=y
 # CONFIG_PKG_xf86-video-trident is not set
 # CONFIG_PKG_xf86-video-v4l2 is not set
 CONFIG_PKG_xf86-video-vesa=y
+# CONFIG_PKG_xf86-video-virtualbox is not set
 CONFIG_PKG_xf86-video-vmware=y
 # CONFIG_PKG_xinput-calibrator is not set
 CONFIG_PKG_xkbcomp=y
