cwiid : build with python

--- a/packages/cwiid/build
+++ b/packages/cwiid/build
@@ -4,9 +4,15 @@
 
 cd $BUILD/$1*
 
+export PYTHONXCPREFIX="$LIB_PREFIX"
+export LIB_P=$LIB_PREFIX
+
+
+do_autoconf
 do_configure \
             --disable-ldconfig \
-            --without-python \
+
+export TARGET_CFLAGS="$TARGET_CFLAGS -I../libcwiid"
 
 make
 make_install
