fribidi : update to 0.19.4

--- a/packages/fribidi/build
+++ b/packages/fribidi/build
@@ -1,10 +1,12 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 export local_cflags="-DFRIBIDI_CHUNK_SIZE=4080"
 
-cd $BUILD/$1*
 do_configure \
             --disable-debug \
             --enable-malloc \
