refresh defconfig files

--- a/config/defconfigs/geexbox-xbmc-imx6-sabrelite.conf
+++ b/config/defconfigs/geexbox-xbmc-imx6-sabrelite.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120923-r15063"
+CONFIG_KERNELVERSION="devel-20121109-r15480"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -753,7 +753,7 @@ CONFIG_PKG_vdr-dynamite=y
 # CONFIG_PKG_vdr-osdpip is not set
 # CONFIG_PKG_vdr-osdteletext is not set
 # CONFIG_PKG_vdr-pcd is not set
-# CONFIG_PKG_vdr-plugin-vnsiserver is not set
+CONFIG_PKG_vdr-plugin-vnsiserver=y
 CONFIG_PKG_vdr-plugin-xvdr=y
 # CONFIG_PKG_vdr-pvr350 is not set
 # CONFIG_PKG_vdr-pvrinput is not set
@@ -812,6 +812,7 @@ CONFIG_PKG_xbmc-addon-bluecop=y
 # CONFIG_PKG_xbmc-addon-navi-x is not set
 CONFIG_PKG_xbmc-addon-vuplus=y
 CONFIG_PKG_xbmc-addon-xvdr=y
+# CONFIG_PKG_xbmc-eventclient is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
