--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120923-r15063"
+CONFIG_KERNELVERSION="devel-20121109-r15480"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -567,7 +567,7 @@ CONFIG_OPT_mesa_nouveau=y
 CONFIG_OPT_mesa_vdpau=y
 CONFIG_OPT_mesa_xvmc=y
 # CONFIG_OPT_mesa_wayland is not set
-# CONFIG_PKG_mtdev is not set
+CONFIG_PKG_mtdev=y
 # CONFIG_PKG_mx is not set
 CONFIG_PKG_ncurses=y
 # CONFIG_OPT_ncurses_terminfo is not set
@@ -794,6 +794,7 @@ CONFIG_PKG_xbmc-addon-bluecop=y
 CONFIG_PKG_xbmc-addon-navi-x=y
 CONFIG_PKG_xbmc-addon-vuplus=y
 CONFIG_PKG_xbmc-addon-xvdr=y
+# CONFIG_PKG_xbmc-eventclient is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
