--- a/config/defconfigs/base-omap4-pandaboard.conf
+++ b/config/defconfigs/base-omap4-pandaboard.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120923-r15063"
+CONFIG_KERNELVERSION="devel-20121109-r15480"
 CONFIG_MODULES=y
 CONFIG_FLAVOUR_base=y
 # CONFIG_FLAVOUR_geexbox is not set
@@ -657,6 +657,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_xbmc-addon-navi-x is not set
 # CONFIG_PKG_xbmc-addon-vuplus is not set
 # CONFIG_PKG_xbmc-addon-xvdr is not set
+# CONFIG_PKG_xbmc-eventclient is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
