--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120923-r15063"
+CONFIG_KERNELVERSION="devel-20121109-r15480"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -585,7 +585,7 @@ CONFIG_OPT_mesa_vmwgfx=y
 CONFIG_OPT_mesa_vdpau=y
 # CONFIG_OPT_mesa_xvmc is not set
 # CONFIG_OPT_mesa_wayland is not set
-# CONFIG_PKG_mtdev is not set
+CONFIG_PKG_mtdev=y
 # CONFIG_PKG_mx is not set
 CONFIG_PKG_ncurses=y
 CONFIG_OPT_ncurses_terminfo=y
@@ -793,6 +793,7 @@ CONFIG_PKG_livepause=y
 # CONFIG_PKG_xbmc-addon-navi-x is not set
 # CONFIG_PKG_xbmc-addon-vuplus is not set
 # CONFIG_PKG_xbmc-addon-xvdr is not set
+# CONFIG_PKG_xbmc-eventclient is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
