--- a/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120923-r15063"
+CONFIG_KERNELVERSION="devel-20121109-r15480"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -792,6 +792,7 @@ CONFIG_OPT_xbmc_alsa=y
 CONFIG_PKG_xbmc-addon-navi-x=y
 CONFIG_PKG_xbmc-addon-vuplus=y
 # CONFIG_PKG_xbmc-addon-xvdr is not set
+# CONFIG_PKG_xbmc-eventclient is not set
 # CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
