kmod: do not build manpages

--- a/packages/kmod/build
+++ b/packages/kmod/build
@@ -8,7 +8,8 @@ cd $PKG_BUILD_DIR
 mkdir -p objdir-target
 cd objdir-target
 
-do_configure
+do_configure \
+  --disable-manpages
 
 make
 make_install
