kmod-host: do not build manpages

--- a/packages/kmod-host/build
+++ b/packages/kmod-host/build
@@ -10,7 +10,8 @@ cd $BUILD/${PKG_PARENT}-${PKG_VERSION}
 mkdir -p objdir-host
 cd objdir-host
 
-do_configure host
+do_configure host \
+  --disable-manpages
 
 make
 make_install toolchain
