xf86-video-virtualbox: use xorriso instead of isoinfo

--- a/packages/xf86-video-virtualbox/build
+++ b/packages/xf86-video-virtualbox/build
@@ -10,7 +10,8 @@ cd $PKG_BUILD_DIR
 
 mkdir -p data data-iso data-extracted work .install/$XORG_PATH_MODULES/drivers .install/usr/lib/dri .install/usr/lib
 tar xjf VirtualBox.tar.bz2 -C data
-isoinfo -i data/additions/VBoxGuestAdditions.iso -x /VBOXLINUXADDITIONS.RUN\;1 > data-iso/VBoxLinuxAdditions.run
+xorriso -osirrox on -indev data/additions/VBoxGuestAdditions.iso \
+  -extract /VBoxLinuxAdditions.run data-iso/VBoxLinuxAdditions.run
 sh data-iso/VBoxLinuxAdditions.run --noexec --target data-extracted
 
 if [ "$TARGET_ARCH" = i386 ]; then
