--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -107,6 +107,8 @@ if [ ! -f configure ] ; then
   cd lib/libdvd/libdvdnav && do_autoconf  && cd -
 fi
 
+make -f codegenerator.mk
+
 sed -i 's%PYTHON_VERSION=$ac_python_version%PYTHON_VERSION=2.7%' configure
 GCC_NO_LTO=1 GCC_NO_GOLD=1 GCC_NO_GRAPHITE=1 GCC_NO_LOOP_TREE=1 \
 do_configure \
