yajl : update to 2.0.4

--- a/packages/yajl/build
+++ b/packages/yajl/build
@@ -1,14 +1,13 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
-cd $BUILD/$1*
-mkdir -p build && cd build
+cd $PKG_BUILD_DIR
 
 cmake  \
       -DCMAKE_FIND_ROOT_PATH=$LIB_PREFIX \
       -DCMAKE_INSTALL_PREFIX=/usr \
-      -DWITH_GCRYPT="ON" \
-      ..
+
 make
 make_install
