vdr-sc : harmonize

--- a/packages/vdr-sc/build
+++ b/packages/vdr-sc/build
@@ -2,9 +2,10 @@
 
 . config/options
 
-get_meta $1
+get_meta vdr
+VDR_VERSION=$PKG_VERSION
 
-VDR_DIR=`basename $BUILD/vdr-1*`
+get_meta $1
 
 CFLAGS="$CFLAGS -fPIC"
 CXXFLAGS="$CXXFLAGS -fPIC"
@@ -13,6 +14,6 @@ MAKEFLAGS=-j1
 
 cd $PKG_BUILD_DIR
 make \
-  VDRDIR="../$VDR_DIR" \
+  VDRDIR="$ROOT/$BUILD/vdr-${VDR_VERSION}" \
   LIBDIR="." \
   LOCALEDIR="./locale"
