--- a/config/defconfigs/base-imx6-sabrelite.conf
+++ b/config/defconfigs/base-imx6-sabrelite.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20121109-r15480"
+CONFIG_KERNELVERSION="devel-20120923-r15063"
 CONFIG_MODULES=y
 CONFIG_FLAVOUR_base=y
 # CONFIG_FLAVOUR_geexbox is not set
@@ -598,6 +598,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_maliit-plugins is not set
 # CONFIG_PKG_nbench is not set
 # CONFIG_PKG_nzbget is not set
+# CONFIG_PKG_pastebincl is not set
 # CONFIG_PKG_patchelf is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
