--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20121109-r15480"
+CONFIG_KERNELVERSION="devel-20120923-r15063"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -642,6 +642,7 @@ CONFIG_PKG_libglu=y
 # CONFIG_PKG_maliit-plugins is not set
 # CONFIG_PKG_nbench is not set
 CONFIG_PKG_nzbget=m
+CONFIG_PKG_pastebincl=y
 # CONFIG_PKG_patchelf is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
@@ -1159,6 +1160,7 @@ CONFIG_PKG_xf86-video-displaylink=y
 # CONFIG_PKG_xf86-video-dove is not set
 CONFIG_PKG_xf86-video-fbdev=y
 CONFIG_PKG_xf86-video-fglrx=m
+CONFIG_PKG_xf86-video-fglrx-legacy=m
 # CONFIG_PKG_xf86-video-glint is not set
 # CONFIG_PKG_xf86-video-i740 is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
