--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -107,7 +107,9 @@ if [ ! -f configure ] ; then
   cd lib/libdvd/libdvdnav && do_autoconf  && cd -
 fi
 
-make -f codegenerator.mk
+if [ "$TARGET_MACHINE" != "pandaboard" ] ; then
+  make -f codegenerator.mk
+fi
 
 sed -i 's%PYTHON_VERSION=$ac_python_version%PYTHON_VERSION=2.7%' configure
 GCC_NO_LTO=1 GCC_NO_GOLD=1 GCC_NO_GRAPHITE=1 GCC_NO_LOOP_TREE=1 \
