curl build with openssl

--- a/packages/curl/build
+++ b/packages/curl/build
@@ -16,7 +16,7 @@ do_configure \
             --enable-thread \
             --with-random=/dev/urandom \
             --with-gnutls=$LIB_PREFIX \
-            --without-ssl \
+            --with-ssl \
 
 make
 make_install
