refresh defconfig files

--- a/config/defconfigs/base-x86_64-generic.conf
+++ b/config/defconfigs/base-x86_64-generic.conf
@@ -533,7 +533,7 @@ CONFIG_PKG_ncurses=y
 # CONFIG_PKG_ncursesw is not set
 # CONFIG_PKG_neon is not set
 CONFIG_PKG_nettle=y
-# CONFIG_PKG_openssl is not set
+CONFIG_PKG_openssl=y
 # CONFIG_PKG_orc is not set
 # CONFIG_PKG_ortp is not set
 # CONFIG_PKG_pango is not set
@@ -875,6 +875,7 @@ CONFIG_PKG_wpa-supplicant=y
 # CONFIG_PKG_kaa-svn is not set
 # CONFIG_PKG_mysql-python is not set
 # CONFIG_PKG_pygame is not set
+# CONFIG_PKG_pyload is not set
 # CONFIG_PKG_python-beautifulsoup is not set
 # CONFIG_PKG_python-decorator is not set
 # CONFIG_PKG_python-formencode is not set
@@ -884,7 +885,10 @@ CONFIG_PKG_wpa-supplicant=y
 # CONFIG_PKG_python-lxml is not set
 # CONFIG_PKG_python-numeric is not set
 # CONFIG_PKG_python-pil is not set
+# CONFIG_PKG_python-pycrypto is not set
+# CONFIG_PKG_python-pycurl is not set
 # CONFIG_PKG_python-pylirc is not set
+# CONFIG_PKG_python-pyopenssl is not set
 # CONFIG_PKG_python-simplejson is not set
 # CONFIG_PKG_python-sqlalchemy is not set
 # CONFIG_PKG_python-sqlalchemy-migrate is not set
