--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -951,6 +951,7 @@ CONFIG_PKG_kaa-metadata=y
 # CONFIG_PKG_kaa-svn is not set
 # CONFIG_PKG_mysql-python is not set
 CONFIG_PKG_pygame=y
+# CONFIG_PKG_pyload is not set
 CONFIG_PKG_python-beautifulsoup=y
 CONFIG_PKG_python-decorator=y
 CONFIG_PKG_python-formencode=y
@@ -960,7 +961,10 @@ CONFIG_PKG_python-formencode=y
 CONFIG_PKG_python-lxml=y
 CONFIG_PKG_python-numeric=y
 CONFIG_PKG_python-pil=y
+# CONFIG_PKG_python-pycrypto is not set
+# CONFIG_PKG_python-pycurl is not set
 CONFIG_PKG_python-pylirc=y
+# CONFIG_PKG_python-pyopenssl is not set
 # CONFIG_PKG_python-simplejson is not set
 CONFIG_PKG_python-sqlalchemy=y
 CONFIG_PKG_python-sqlalchemy-migrate=y
