--- a/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
@@ -951,6 +951,7 @@ CONFIG_PKG_Python=y
 # CONFIG_PKG_kaa-svn is not set
 # CONFIG_PKG_mysql-python is not set
 # CONFIG_PKG_pygame is not set
+CONFIG_PKG_pyload=m
 # CONFIG_PKG_python-beautifulsoup is not set
 # CONFIG_PKG_python-decorator is not set
 # CONFIG_PKG_python-formencode is not set
@@ -959,8 +960,11 @@ CONFIG_PKG_Python=y
 CONFIG_PKG_python-lsb-release=y
 # CONFIG_PKG_python-lxml is not set
 # CONFIG_PKG_python-numeric is not set
-# CONFIG_PKG_python-pil is not set
+CONFIG_PKG_python-pil=m
+CONFIG_PKG_python-pycrypto=m
+CONFIG_PKG_python-pycurl=m
 # CONFIG_PKG_python-pylirc is not set
+CONFIG_PKG_python-pyopenssl=m
 CONFIG_PKG_python-simplejson=y
 # CONFIG_PKG_python-sqlalchemy is not set
 # CONFIG_PKG_python-sqlalchemy-migrate is not set
@@ -1077,7 +1081,7 @@ CONFIG_PKG_screen=m
 # CONFIG_PKG_snowball-mactool is not set
 # CONFIG_PKG_strace is not set
 # CONFIG_PKG_tools-generator is not set
-# CONFIG_PKG_unrar is not set
+CONFIG_PKG_unrar=m
 CONFIG_PKG_usbutils=y
 CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_valgrind is not set
