--- a/config/defconfigs/base-omap4-pandaboard.conf
+++ b/config/defconfigs/base-omap4-pandaboard.conf
@@ -813,6 +813,7 @@ CONFIG_PKG_network-backend=y
 # CONFIG_PKG_kaa-svn is not set
 # CONFIG_PKG_mysql-python is not set
 # CONFIG_PKG_pygame is not set
+# CONFIG_PKG_pyload is not set
 # CONFIG_PKG_python-beautifulsoup is not set
 # CONFIG_PKG_python-decorator is not set
 # CONFIG_PKG_python-formencode is not set
@@ -822,7 +823,10 @@ CONFIG_PKG_network-backend=y
 # CONFIG_PKG_python-lxml is not set
 # CONFIG_PKG_python-numeric is not set
 # CONFIG_PKG_python-pil is not set
+# CONFIG_PKG_python-pycrypto is not set
+# CONFIG_PKG_python-pycurl is not set
 # CONFIG_PKG_python-pylirc is not set
+# CONFIG_PKG_python-pyopenssl is not set
 # CONFIG_PKG_python-simplejson is not set
 # CONFIG_PKG_python-sqlalchemy is not set
 # CONFIG_PKG_python-sqlalchemy-migrate is not set
