--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -957,6 +957,7 @@ CONFIG_PKG_dbus-python=m
 # CONFIG_PKG_kaa-svn is not set
 # CONFIG_PKG_mysql-python is not set
 # CONFIG_PKG_pygame is not set
+CONFIG_PKG_pyload=m
 # CONFIG_PKG_python-beautifulsoup is not set
 # CONFIG_PKG_python-decorator is not set
 # CONFIG_PKG_python-formencode is not set
@@ -965,8 +966,11 @@ CONFIG_PKG_python-gobject=m
 CONFIG_PKG_python-lsb-release=y
 # CONFIG_PKG_python-lxml is not set
 # CONFIG_PKG_python-numeric is not set
-# CONFIG_PKG_python-pil is not set
+CONFIG_PKG_python-pil=m
+CONFIG_PKG_python-pycrypto=m
+CONFIG_PKG_python-pycurl=m
 # CONFIG_PKG_python-pylirc is not set
+CONFIG_PKG_python-pyopenssl=m
 CONFIG_PKG_python-simplejson=y
 # CONFIG_PKG_python-sqlalchemy is not set
 # CONFIG_PKG_python-sqlalchemy-migrate is not set
