geexbox-xbmc-tegra2-ac100 : remove vdr

--- a/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
@@ -711,7 +711,7 @@ CONFIG_OPT_libbluray_aacs=y
 # CONFIG_PKG_ti-omap4-domx is not set
 CONFIG_PKG_tvheadend=y
 CONFIG_OPT_tvheadend_zeroconf=y
-CONFIG_PKG_vdr=y
+# CONFIG_PKG_vdr is not set
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
 # CONFIG_PKG_vdr-dummydevice is not set
@@ -734,7 +734,7 @@ CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-osdpip is not set
 # CONFIG_PKG_vdr-osdteletext is not set
 # CONFIG_PKG_vdr-pcd is not set
-CONFIG_PKG_vdr-plugin-vnsiserver=y
+# CONFIG_PKG_vdr-plugin-vnsiserver is not set
 # CONFIG_PKG_vdr-plugin-xvdr is not set
 # CONFIG_PKG_vdr-pvr350 is not set
 # CONFIG_PKG_vdr-pvrinput is not set
