--- a/packages/python-pycrypto/build
+++ b/packages/python-pycrypto/build
@@ -7,7 +7,7 @@ get_meta $1
 cd $PKG_BUILD_DIR
 
 export PYTHONXCPREFIX="$LIB_PREFIX"
-
+do_configure
 python setup.py build --cross-compile
 python setup.py install -O1 --skip-build --prefix /usr --root .install
 
