mesa: add conditional osmesa support

--- a/packages/mesa/build
+++ b/packages/mesa/build
@@ -17,6 +17,7 @@ pkg_uses $1 radeon    && DRI_DRIVERS="${DRI_DRIVERS}r200,radeon,"
 pkg_uses $1 nouveau   && DRI_DRIVERS="${DRI_DRIVERS}nouveau,"
 pkg_uses $1 vdpau && VDPAU="--enable-vdpau" || VDPAU="--disable-vdpau"
 pkg_uses $1 xvmc && XVMC="--enable-xvmc" || XVMC="--disable-xvmc"
+pkg_uses $1 osmesa && OSMESA="--enable-osmesa" || OSMESA="--disable-osmesa"
 DRI_DRIVERS="${DRI_DRIVERS}swrast"
 
 # Gallium 3D
@@ -97,6 +98,7 @@ do_configure target \
   --enable-driglx-direct \
   $VDPAU \
   $XVMC \
+  $OSMESA \
 
 cp src/glsl/Makefile src/glsl/Makefile.orig
 sed -e "s#\.\/builtin_compiler#$ROOT/$TOOLCHAIN/bin/builtin_compiler#g" \
