wine: add conditional osmesa support

--- a/packages/wine/build
+++ b/packages/wine/build
@@ -22,6 +22,12 @@ else
   OPENGL_CONFIG="--without-opengl"
 fi
 
+if pkg_uses $1 osmesa; then
+  OPENGL_CONFIG="--with-osmesa"
+else
+  OPENGL_CONFIG="--without-osmesa"
+fi
+
 if pkg_uses $1 pulseaudio; then
   PULSEAUDIO_CONFIG="--with-pulse"
 else
@@ -33,6 +39,8 @@ if pkg_uses $1 xorg; then
 else
   XORG_CONFIG="--without-x --without-xcomposite"
 fi
+
+do_autoconf
 
 mkdir -p objdir-host
 cd objdir-host
@@ -69,11 +77,11 @@ do_configure \
   --without-v4l \
   --with-xml \
   --with-xslt \
-  --without-osmesa \
   --without-xinerama \
   $ALSA_CONFIG \
   $GSTREAMER_CONFIG \
   $OPENGL_CONFIG \
+  $OSMESA_CONFIG \
   $PULSEAUDIO_CONFIG \
   $XORG_CONFIG \
 
